# flowmind-ultra-1

./: .gitignore  flowmind-ultra-prd.md  flowmind-ultra-prd2.md  repomix.config.json  start.sh
docs/: FlowMind-Ultra-Architectural-Guide.md
flowmind-ultra/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
flowmind-ultra/src/: App.tsx  index.css
flowmind-ultra/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
flowmind-ultra/src-tauri/capabilities/: default.json
flowmind-ultra/src-tauri/src/: lib.rs  main.rs
flowmind-ultra/src-tauri/src/audio/: capture.rs  commands.rs  mod.rs  transcribe.rs
flowmind-ultra/src-tauri/src/db/: commands.rs  mod.rs  outbox.rs  store.rs  supabase.rs  vector.rs
flowmind-ultra/src-tauri/src/llm/: client.rs  commands.rs  embeddings.rs  flattener.rs  ledger.rs  memory_indexer.rs  mod.rs  sanitizer.rs  slicer.rs  sniper.rs
flowmind-ultra/src-tauri/src/orchestrator/: commands.rs  loop_runner.rs  mod.rs  nodes.rs  schemas.rs  state.rs
flowmind-ultra/src-tauri/src/pty/: commands.rs  manager.rs  mod.rs  registry.rs  semantic.rs  session.rs  stability.rs
flowmind-ultra/src-tauri/src/workers/: commands.rs  compiler.rs  conflict.rs  executor.rs  history.rs  manager.rs  mod.rs
flowmind-ultra/src/core/ipc/: bridge.ts
flowmind-ultra/src/features/chat/: ChatGraph.tsx  ModelSelector.tsx  VoiceInput.tsx
flowmind-ultra/src/features/swarm/: CommanderViewer.tsx  FlattenerSettingsPanel.tsx  GraphViewer.tsx  MemoryViewer.tsx  NodeIndicator.tsx  ScrubSlider.tsx  SpecViewer.tsx  SprintViewer.tsx  SwarmDashboard.tsx  SwarmVisualizer.tsx
flowmind-ultra/src/features/terminal/: TerminalPanel.tsx
flowmind-ultra/src/features/workers/: WorkerDashboard.tsx
flowmind-ultra/src/features/workspace/: DiffModal.tsx  FileTree.tsx
flowmind-ultra/src/stores/: useChatStore.ts  useLLMStore.ts  useMemoryStore.ts  useSettingsStore.ts  useSupabaseStore.ts  useSwarmStore.ts  useTimeTravelStore.ts  useVoiceStore.ts  useWorkerStore.ts  useWorkspaceStore.ts
