[package]
name = "app"
default-run = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shim"
path = "src/bin/shim.rs"


[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
chrono = "=0.4.38"
tauri-plugin-log = "2"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
redb = "2.4"
portable-pty = "0.8"
ulid = "1.1"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
wezterm-term = { package = "tattoy-wezterm-term", version = "0.1.0-fork.5" }
regex = "1.10"
strip-ansi-escapes = "0.2"
ignore = "0.4"

# Epic 1: QA 2.0
tokio-util = "0.7"

# Epic 2: Vibecoding
cpal = "0.15"
hound = "3.5"
rubato = "0.14"
whisper-rs = { version = "0.11", features = [] }

# Epic 3: Vectorized Swarm Memory
lancedb = "0.15"
arrow-array = "53.4.1"
arrow-schema = "53.4.1"
candle-core = "0.6"
candle-nn = "0.6"
tokenizers = "0.19"
futures = "0.3"

# Epic 4: Visual State Time-Travel
similar = "2.5"
zstd = "0.13"
